tests/negative/semantic/structure_field_global_conflict/input.ci
int foo = 1;

structure S {
    int foo = 0;
}

void main() {}
